--- a/src/App.css
+++ b/src/App.css
@@ -749,3 +749,135 @@ body {
 .votes p {
   padding: 5px;
 }
+
+
+/* ---------------------------------------------------------------------
+ Voting
+------------------------------------------------------------------------ */
+
+.votes-title {
+  max-width: 25%;
+  border-top: solid 1px #706e70;
+  margin: auto;
+  padding: 5px;
+}
+
+.voting-grid {
+  display: flex;
+}
+
+#selection-table {
+  flex: 1;
+  padding: 10px;
+}
+
+.st-header {
+  line-height: 30px;
+  padding: 10px;
+  height: 35px;
+  font-size: 25px;
+  text-align: left;
+  color: #B1B0B1;
+  border-bottom: solid 1px black;
+}
+
+.st-header .vote-count {
+  font-size: 16px;
+}
+
+.selection-votes {
+  float: right;
+  padding-right: 10px;
+}
+
+.st-rows p {
+  line-height: 30px;
+  padding: 10px;
+  color: #868586;
+}
+
+table td, table th {
+  padding: 10px;
+}
+#voting-table {
+  width: 100%;
+  flex: 1;
+  margin: 10px;
+}
+#voting-table-head {
+  background-color: #3B8DA0;
+}
+
+#vt-header {
+  color: #fff;
+  font-size: 25px;
+  text-align: left;
+  height: 30px;
+  line-height: 30px;
+}
+
+.vote-count {
+  border-radius: 100%;
+  float: right;
+  font-weight: bold;
+  line-height: 10px;
+  width: 10px;
+  height: 10px;
+  padding: 10px;
+}
+
+.vote-count-lt {
+  background-color: #fff;
+  color: #3B8DA0;
+}
+
+.vote-count-dk {
+  background-color: #3B8DA0;
+  color: #fff;
+}
+
+.snack-row {
+  color: #868586;
+  height: 30px;
+  line-height: 30px;
+}
+
+.snack-row:nth-of-type(odd) {
+  background-color: #D6D6D6;
+}
+
+.snack-row:nth-of-type(even) {
+  background-color: #E1E1E1;
+}
+
+td.snack-indicator {
+  width: 30px;
+}
+
+
+td.snack-indicator:nth-of-type(odd) {
+  background-color: #C6C6C6;
+}
+
+td.snack-indicator:nth-of-type(even) {
+  background-color: ##CFCFCF;
+}
+
+td.snack-indicator.selected {
+  background-color: green;
+}
+
+td.snack-indicator img {
+  width: 15px;
+  height: 15px;
+  margin: auto;
+  display: block;
+}
+
+td.snack-votes {
+  text-align: right;
+  padding-right: 20px;
+}
+
+
+
