--- a/src/App.css
+++ b/src/App.css
@@ -719,16 +719,30 @@ body {
 /* ---------------------------------------------------------------------
  snack squares
 ------------------------------------------------------------------------ */
+.snack-grid {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .snack-square {
-  width: 300px;
+  min-width: 300px;
   height: 200px;
   background-color: #fff;
   box-shadow: 0px 3px 15px rgba(0,0,0,0.5);
   padding: 5px;
+  flex: 1;
+  margin: 10px;
+}
+
+.snack-square img {
+  width: 100px;
+  display: block;
+  margin: auto;
 }
 
 .snack-info {
   margin-top: 10px;
+  padding: 10px;
 }
 
 .snack-info h2 {
